[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pypinyin"
description = "汉字拼音转换模块/工具."
readme = "README.rst"
dynamic = ["version"]
requires-python = ">=2.6, !=3.0.*, !=3.1.*, !=3.2.*, <4"
license = {text = "MIT"}
authors = [{name = "mozillazg, 闲耘", email = "mozillazg101@gmail.com"}]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 2",
    "Programming Language :: Python :: 2.7",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.4",
    "Programming Language :: Python :: 3.5",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Utilities",
    "Topic :: Text Processing"
]
keywords = ["pinyin", "拼音"]
dependencies = [
    "argparse; python_version < '2.7'",
    "enum34; python_version < '3.4'",
    "typing; python_version < '3.5'"
]

[project.urls]
Documentation = "https://pypinyin.readthedocs.io/"
Source = "https://github.com/mozillazg/python-pinyin"
Tracker = "https://github.com/mozillazg/python-pinyin/issues"

[project.scripts]
pypinyin = "pypinyin.__main__:main"

[project.entry-points.pyinstaller40]
hook-dirs = "pypinyin.__pyinstaller:get_hook_dirs"

[dependency-groups]
dev = [
    "argparse",
    "bumpversion",
    "mypy; python_version >= '3.5'",
    "pre-commit",
    "pygments>=2.7.4; python_version >= '3.5'",
    "pytest",
    "pytest-cov",
    "pytest-random-order",
    "setuptools",
    "sphinx>=3.0.4; python_version >= '3.5'",
    "tox",
    "twine",
    "wheel>=0.21"
]

[tool.setuptools]
packages = ["pypinyin", "pypinyin.contrib", "pypinyin.seg", "pypinyin.style", "pypinyin.tools", "pypinyin.__pyinstaller"]
include-package-data = true
zip-safe = false

[tool.setuptools.dynamic]
version = {attr = "pypinyin.__version__"}
